# crowsight

./: .gitignore  pyproject.toml
examples/: usage.py
examples/my_project/backend/: api.py  db_utils.py
examples/my_project/backend/handlers/: user_handler.py
examples/my_project/frontend/: index.js  styles.css
examples/my_project/frontend/components/: Button.jsx
examples/my_project/models/: Order.java
examples/my_project/scripts/: build.sh  deploy.ts
examples/my_project/services/: notifications.go
examples/my_project/services/payments/: processor.go
src/crowsight/: __init__.py  codebase_analyzer.py  node_wrapper.py  parser_engine.py  simple_query.py
src/crowsight/cache/: manifest.py
src/crowsight/core/: node.py  parser.py  query_engine.py
src/crowsight/filters/: node_filter.py
src/crowsight/services/: analyzer.py
