[project]
name = "crowsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Tavallaie", email = "a.tavallaie@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
crowsight = "crowsight:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
