[project]
name = "crowsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Tavallaie", email = "a.tavallaie@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.7.2",
]

[project.scripts]
crowsight = "crowsight:main"

[tool.ruff]
exclude = ["examples"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
